Resolves: fdo#47291 polypoly[line|gon] points are signed

regression from f6a34255af1339cd7132b7527dc0c10c10d38249

Change-Id: Iabfaf92629cd4d53ab7af5f3e3013eb81bb8104d